# quiz-backend

./: .editorconfig  .env.test  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  REPOSITORY_DEPENDENCY_INJECTION.md  SECURITY.md  TODO.md  alembic.ini  config.py  database.py  docker-compose.yml  env.example  fix_models_advanced.py  main.py  pyproject.toml  requirements.txt  telegram_bot_polling.py  telegram_setup.md  uvicorn.conf  ИСПРАВЛЕНИЯ_ТЕСТОВ_РЕЗЮМЕ.md  РЕЗЮМЕ_РЕАЛИЗАЦИИ.md
.github/workflows/: ci.yml
docs/: POLYFACTORY_FACTORIES.md  QUESTION_TYPES.md  RESPONDENT_ARCHITECTURE.md
middleware/: __init__.py  telegram_middleware.py
migrations/: env.py
migrations/versions/: 1997d659a814_add_created_by_field_to_survey_model.py  40358149e8ad_add_telegram_fields_to_userdata_model.py  5e3035c71896_add_question_data_field_to_question_.py  89d071d826ca_initial_migration_create_all_tables.py  9d9bb9d0e800_add_respondent_architecture_tables.py  cf061d6fb570_refactor_telegram_data_to_json_only_tg_.py  d42dd0829508_initial_migration_with_sqlalchemy_base.py
models/: __init__.py  push_notification.py  question.py  response.py  survey.py  user.py  user_data.py
routers/: __init__.py  admin.py  auth.py  monitoring.py  notifications.py  push_notifications.py  reports.py  responses.py  surveys.py  telegram.py  telegram_webapp.py  user_data.py  validation.py
schemas/: __init__.py  admin.py  push_notification.py  validation.py
services/: __init__.py  email_validation.py  jwt_service.py  monitoring_service.py  pdf_service.py  push_notification_service.py  realtime_notifications.py  redis_service.py  telegram_advanced.py  telegram_service.py  telegram_webapp.py  user_service.py
src/: __init__.py  config.py  database.py  main.py  telegram_bot_polling.py
src/middleware/: __init__.py  telegram_middleware.py
src/models/: __init__.py  consent_log.py  profile.py  push_notification.py  question.py  respondent.py  respondent_event.py  respondent_survey.py  response.py  survey.py  survey_data_requirements.py  user.py  user_data.py
src/repositories/: __init__.py  base.py  consent_log.py  dependencies.py  profile.py  push_notification.py  question.py  respondent.py  respondent_event.py  respondent_survey.py  response.py  survey.py  survey_data_requirements.py  user.py  user_data.py
src/routers/: __init__.py  admin.py  auth.py  monitoring.py  notifications.py  profiles.py  push_notifications.py  reports.py  respondents.py  responses.py  surveys.py  telegram.py  telegram_webapp.py  user_data.py  validation.py
src/schemas/: __init__.py  admin.py  consent_log.py  monitoring.py  profile.py  push_notification.py  respondent.py  respondent_event.py  respondent_survey.py  response.py  survey.py  survey_data_requirements.py  user.py  validation.py
src/services/: __init__.py  email_validation.py  jwt_service.py  monitoring_service.py  pdf_service.py  profile_service.py  push_notification_service.py  realtime_notifications.py  redis_service.py  respondent_service.py  survey_participation_service.py  telegram_advanced.py  telegram_service.py  telegram_webapp.py  user_service.py
tests/: PLAN.md  TODO.md  conftest.py  demo_polyfactory_test.py  requirements.txt  test_health.py  ИСПРАВЛЕНИЕ_ТЕСТОВ_ПЛАН.md  ИСПРАВЛЕНИЕ_ТЕСТОВ_РЕЗУЛЬТАТЫ.md
tests/e2e/: README.md  conftest.py  requirements.txt  run_all_tests.py  test_admin_api_e2e.py  test_api_e2e.py  test_telegram_api_e2e.py
tests/factories/: __init__.py  consent_log_factory.py  monitoring_factories.py  profile_factory.py  question_factory.py  respondent_factory.py  respondent_survey_factory.py  response_factory.py  survey_factory.py  user_data_factory.py  user_factory.py
tests/factories/surveys/: __init__.py  fixtures.py  model_factories.py  pydantic_factories.py
tests/factories/users/: __init__.py  fixtures.py  model_factories.py  pydantic_factories.py
tests/unit/: conftest.py  test_admin_router.py  test_auth_router.py  test_notifications_router.py  test_reports_router.py  test_responses_router.py  test_surveys_router.py  test_telegram_router.py  test_user_data_router.py  test_validation_router.py
tests/unit/admin/: conftest.py
tests/unit/admin/edge_cases/: test_admin_edge_cases.py
tests/unit/admin/negative/: test_admin_errors.py
tests/unit/admin/positive/: test_admin_dashboard.py  test_admin_surveys.py  test_admin_system.py  test_admin_users.py
tests/unit/auth/: conftest.py  test_auth_router_direct.py  test_auth_router_simple.py  test_auth_router_working.py
tests/unit/auth/edge_cases/: __init__.py  test_auth_edge_cases.py
tests/unit/auth/negative/: __init__.py  test_user_login.py  test_user_profile.py  test_user_registration.py
tests/unit/auth/positive/: __init__.py  test_telegram_auth.py  test_user_login.py  test_user_profile.py  test_user_registration.py
tests/unit/monitoring/: conftest.py  test_monitoring_service.py  test_monitoring_service_simple.py
tests/unit/monitoring/edge_cases/: test_monitoring_edge_cases.py
tests/unit/monitoring/negative/: test_monitoring_errors.py
tests/unit/monitoring/positive/: test_metrics_tracking.py  test_system_health.py  test_user_analytics.py
tests/unit/notifications/: conftest.py
tests/unit/notifications/edge_cases/: test_notification_edge_cases.py
tests/unit/notifications/negative/: test_notification_errors.py  test_push_notification_errors.py
tests/unit/notifications/positive/: test_notification_statistics.py  test_push_notifications.py  test_realtime_notifications.py
tests/unit/repositories/: test_survey_data_requirements_repository.py
tests/unit/respondents/: conftest.py
tests/unit/respondents/edge_cases/: test_respondent_edge_cases.py
tests/unit/responses/: conftest.py  test_responses_router.py
tests/unit/schemas/: test_monitoring_schemas.py  test_response_schemas.py
tests/unit/surveys/: conftest.py
tests/unit/telegram/: conftest.py
tests/unit/users/: conftest.py
tests/unit/validation/: conftest.py
(+37 files in other folders)
